fix alignment on small screens for -or-

--- a/index.css
+++ b/index.css
@@ -47,3 +47,9 @@ aside.quote {
     width: 50%;
   }
 }
+
+@media (max-width: 64em) {
+  .sm-text-center {
+    text-align: center;
+  }
+}
